--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
+<!doctype html>
+<html lang="ru">
+
+<head>
 <meta http-equiv="refresh" content="0"; URL="/public/index.html" />
+</head>
+
+<body>
+</body>
+
+</html>
