--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 
 <head>
-<meta http-equiv="refresh" content="0"; URL="/public/index.html" />
+<meta http-equiv="refresh" content="0; URL=/public/index.html" />
 </head>
 
 <body>
