--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
-<!doctype html>
-<html lang="ru">
-
-<head>
-<meta http-equiv="refresh" content="0; URL=/public/index.html" />
-</head>
-
-<body>
-</body>
-
+<!DOCTYPE HTML>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="refresh" content="0;url=/public/index.html">
+        <title>Page Redirection</title>
+    </head>
+    <body>
+    </body>
 </html>
